--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,11 @@
 
        <!-- Compiled and minified JavaScript -->
        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+       <!--Google Font link-->
+       <link href="https://fonts.googleapis.com/css?family=K2D" rel="stylesheet">
+
+
   </head>
   <body>
     <noscript>
