--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,24 @@
 <!doctype html>
 <html lang="en">
   <head>
+
+
+
+    <script crossorigin type = "text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>           
+
+    <title>The Materialize Dropdowns Example</title>
+    <meta name = "viewport" content = "width = device-width, initial-scale = 1"/>      
+ 
+  
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    
+
+   
+    
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+  
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet"/>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
